// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Info Label (unit tests) when renders with a component should match the snapshot 1`] = `
<kv-info-label description-collapsed-text="Read more" description-opened-text="Read less" label-title="DESCRIPTION">
  <template shadowrootmode="open">
    <div class="info-label">
      <div class="no-description title" part="title">
        DESCRIPTION
      </div>
    </div>
  </template>
  <kv-tag-letter label="Test" tag-letter="T">
    <template shadowrootmode="open">
      <div class="tag-letter-container">
        <div class="letter-avatar">
          <div class="avatar">
            T
          </div>
        </div>
        <div class="label">
          Test
        </div>
      </div>
    </template>
  </kv-tag-letter>
</kv-info-label>
`;

exports[`Info Label (unit tests) when renders with copy values props should match the snapshot 1`] = `
<kv-info-label copy-value="data-model" description="data-model" description-collapsed-text="Read more" description-opened-text="Read less" label-title="TYPE">
  <template shadowrootmode="open">
    <div class="info-label">
      <div class="title" part="title">
        TYPE
      </div>
      <div class="description-wrapper" style="height: nullpx;">
        <div class="description">
          <div class="text">
            data-model
          </div>
          <kv-tooltip position="top" text="Copy">
            <kv-icon class="copy-icon" name="kv-copy"></kv-icon>
          </kv-tooltip>
          <slot></slot>
        </div>
      </div>
    </div>
  </template>
</kv-info-label>
`;

exports[`Info Label (unit tests) when renders with description and read more stuffs should match the snapshot 1`] = `
<kv-info-label description="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book." description-collapsed-text="Read more" description-height="34" description-opened-text="Read less" label-title="DESCRIPTION">
  <template shadowrootmode="open">
    <div class="info-label">
      <div class="title" part="title">
        DESCRIPTION
      </div>
      <div class="description-wrapper" style="height: nullpx;">
        <div class="description">
          <div class="text">
            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
          </div>
          <slot></slot>
        </div>
      </div>
    </div>
  </template>
</kv-info-label>
`;

exports[`Info Label (unit tests) when uses default props should match the snapshot 1`] = `
<kv-info-label description-collapsed-text="Read more" description-opened-text="Read less" label-text="Default">
  <template shadowrootmode="open">
    <div class="info-label"></div>
  </template>
</kv-info-label>
`;
